# dm-knx-iot-zephyr-apps-with-ets-support-on-nxp-mcus

./: README.md  SBOM-KNX_IoT_Zephyr_NXP_MCUs-1.0.spdx.json  west.yml
docs/: ets_demo.md  otbr_support.md
hello_world_knx/: CMakeLists.txt  Kconfig  README.rst  prj-ot-knx-iot.conf  prj.conf  prj_actuator.conf  prj_sensor.conf  sample.yaml
hello_world_knx/boards/: frdm_mcxw72.conf  frdm_mcxw72_1_channel.overlay  frdm_rw612_1_channel.overlay
hello_world_knx/src/: app.h  main.c  openthread_transport.c  openthread_transport.h
